[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-vllm"
version = "0.1.0"
description = "A tiny educational vLLM-style offline inference engine."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["litevllm*"]
